tests/NormalTests/paczka1/small_fuzzy/22408745.err
Error in line 1: S705 A160 52,7
Error in line 3: cve0nldYzcw S105 31,0
